--- a/WebApplication2/WebApplication2.csproj
+++ b/WebApplication2/WebApplication2.csproj
@@ -18,4 +18,9 @@
     <PackageReference Include="NETCore.Encrypt" Version="2.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\uploads\cv\" />
+    <Folder Include="wwwroot\uploads\html\" />
+  </ItemGroup>
+
 </Project>
